--- a/MVC/index.html
+++ b/MVC/index.html
@@ -19,8 +19,12 @@
         <button type="reset" class="btn-reset"></button>
       </form>
       
+      <div class="content">
+        <div id="search-result"></div>
+      </div>
     </div>
   </div>
+
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
