--- a/MVVMcomponent/index.html
+++ b/MVVMcomponent/index.html
@@ -20,20 +20,7 @@
 <div class="content">
       <!-- submit 됐을 때만 출력되도록 검색결과 영역 전체를 감싸줌 -->
       <div v-if="submitted">
-        <!-- v-if : 안의 조건이 참일 경우에만 이 DOM을 출력 -->
-        <div id="search-result" v-if="searchResult.length">
-          <ul>
-            <!-- v-for : 배열 반복을 위해 사용 -->
-            <li v-for="item in searchResult">
-              <!-- v-bind : 어트리뷰트의 값을 바인딩 -->
-              <img v-bind:src="item.image" alt="">
-              <p>{{item.name}}</p>
-            </li>
-          </ul>
-        </div>
-        <div v-else>
-          {{query}} 검색어로 찾을 수 없습니다.
-        </div>
+        <search-result v-bind:data="searchResult" v-bind:query="query"></search-result>
       </div>
       <div v-else>
         <ul class="tabs">
@@ -93,4 +80,20 @@
         <!-- v-show : input의 query의 길이가 있으면 show 없으면 hide -->
         <button v-show="inputValue.length" v-on:click="onReset" type="reset" class="btn-reset"></button>
       </form>
+</template>
+<template id="search-result">
+  <!-- v-if : 안의 조건이 참일 경우에만 이 DOM을 출력 -->
+  <div v-if="data.length">
+    <ul>
+      <!-- v-for : 배열 반복을 위해 사용 -->
+      <li v-for="item in data">
+        <!-- v-bind : 어트리뷰트의 값을 바인딩 -->
+        <img v-bind:src="item.image" alt="">
+        <p>{{item.name}}</p>
+      </li>
+    </ul>
+  </div>
+  <div v-else>
+    {{query}} 검색어로 찾을 수 없습니다.
+  </div>
 </template>
