--- a/MVVMcomponent/index.html
+++ b/MVVMcomponent/index.html
@@ -23,13 +23,7 @@
         <search-result v-bind:data="searchResult" v-bind:query="query"></search-result>
       </div>
       <div v-else>
-        <ul class="tabs">
-          <!-- {클래스명: 조건} 조건이 맞으면 클래스명 출력 -->
-          <li v-for="tab in tabs" v-bind:class="{active: tab === selectedTab}"
-              v-on:click="onClickTab(tab)">
-            {{tab}}
-          </li>
-        </ul>
+        <tabs v-bind:tabs="tabs" v-bind:selected-tab="selectedTab" v-on:@change="onClickTab"></tabs>
         <div v-if="selectedTab === tabs[0]">
           <list v-bind:data="keywords" type="keywords" v-on:@click="onClickKeyword"></list>
         </div>
@@ -94,4 +88,13 @@
     <span v-if="keywordType">추천 검색어가 없습니다.</span>
     <span v-if="historyType">최근 검색어가 없습니다.</span>
   </div>
+</template>
+
+<template id="tabs">
+  <ul class="tabs">
+    <li v-for="tab in tabs" v-bind:class="{active: tab === selectedTab}"
+        v-on:click="onClickTab(tab)">
+      {{tab}}
+    </li>
+  </ul>
 </template>
